added image to index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>When in drought, we bring you lawn-and-order</h1>
-        <p>GuardN delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
+        <p><img src="img/guardNlogo.png" alt=" " /> delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
         </p>
         <p><a class="btn btn-primary btn-lg" role="button">Get Started! &raquo;</a></p>
       </div>
