--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
-
+    <link href="css/main.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -54,7 +54,7 @@
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron customjumbo">
       <div class="container">
         <h1>When in drought, we bring you lawn-and-order</h1>
         <p><img src="img/guardNlogo.png" alt=" " /> delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
