--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header newnavbar">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand newnavbar" href="#">GuardN</a>
+          <a class="navbar-brand" href="#">GuardN</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -54,12 +54,19 @@
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
+
     <div class="jumbotron customjumbo">
       <div class="container">
+      <center><p><a class="btn btn-primary btn-lg" role="button">Home</a>
+      <a class="btn btn-primary btn-lg" role="button">About</a>
+      <a class="btn btn-primary btn-lg" role="button">Products</a>
+      <a class="btn btn-primary btn-lg" role="button">Contact</a>
+      <a class="btn btn-primary btn-lg" role="button">Register Product</a>
+      <a class="btn btn-primary btn-lg" role="button">Log In</a></p></center>
         <h1>When in drought, we bring you lawn-and-order</h1>
         <p><img src="img/guardNlogo.png" alt=" " /> delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
         </p>
-        <p><a class="btn btn-primary btn-lg" role="button">Get Started! &raquo;</a></p>
+        
       </div>
     </div>
 
