--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top newnavbar" role="navigation">
       <div class="container">
-        <div class="navbar-header newnavbar">
+        <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -39,7 +39,7 @@
           </button>
           <a class="navbar-brand" href="#">GuardN</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="navbar-collapse collapse newnavbar">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
