--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
 <address>
   <strong></strong><br>
-  <a href="mailto:#">first.last@example.com</a>
+  <a href="mailto:#">nat@guardn.com</a>
 </address>
         
         
