WHITE TEXT ADDED!

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="jumbotron customjumbo">
       <div class="container">
       
-        <h1>When in drought, we bring you lawn-and-order</h1>
-        <p><img src="img/guardNlogo.png" alt=" " /> delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
+        <h1 style="color:white">When in drought, we bring you lawn-and-order</h1>
+        <p style="color:white" ><img src="img/guardNlogo.png" alt=" " /> delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
         </p>
         
       </div>
