More stuff updated.

--- a/about.html
+++ b/about.html
@@ -72,8 +72,8 @@
       <div class="row" style="float:left">
 
         <div class="col-md-8">
-          <h2>About pHLow</h2>
-          <p>pHLow is a way to automate your home sprinkler system. </p>
+          <h2><b>About pHLow</b></h2>
+          <p><font size="6">pHLow is a way to automate your home sprinkler system. </font></p>
           
         </div>
 
