--- a/contact.html
+++ b/contact.html
@@ -67,14 +67,14 @@
    
 <h1>Contact Information: </h1>
         <address>
-  <strong>GuardN, Inc.</strong><br>
+  <strong>pHLow, Inc.</strong><br>
   Davis, CA 95616<br>
   
 </address>
 
 <address>
   <strong></strong><br>
-  <a href="mailto:#">nat@guardn.com</a>
+  <a href="mailto:#">nat@phlow.com</a>
 </address>
 
 </div>
