New images to index.html

--- a/contact.html
+++ b/contact.html
@@ -60,20 +60,22 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
+     <div class="jumbotron">
+      <div class="container">
+
+     </div>
+     </div>
+
     <div class="jumbotron newer">
       <div class="container">
 
      
    
-<h1>Contact Information: </h1>
+<h2>Contact Information: </h2>
         <address>
   <strong>pHLow, Inc.</strong><br>
   Davis, CA 95616<br>
   
-</address>
-
-<address>
-  <strong></strong><br>
   <a href="mailto:#">nat@phlow.com</a>
 </address>
 
