--- a/product.html
+++ b/product.html
@@ -60,6 +60,13 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
+
+     <div class="jumbotron">
+      <div class="container">
+
+     </div>
+     </div>
+
     <div class="jumbotron newer">
 
 
