New font size for index

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
      
    
-<h2>Contact Information: </h2>
+<h2><b>Contact Information: </b></h2>
         <address>
   <strong>pHLow, Inc.</strong><br>
   Davis, CA 95616<br>
