--- a/demo.html
+++ b/demo.html
@@ -72,7 +72,7 @@
       <div class="row" style="float:left">
 
         <div class="col-md-12">
-          <h2>Demonstrate the pHLow canvas:</h2>
+          <h2><b>Demonstrate the pHLow canvas:</b></h2>
           <p> </p>
           
         </div>
