--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
     <div class="jumbotron customjumbo">
-      <div class="container">
+      <div class="container newcontainer">
       
         <h1 style="color:white">When in drought, we bring you lawn-and-order</h1>
         <p style="color:white" >pHLow delivers a smart sprinkler system that decreases the environmental impact of water waste and lowers landscaping costs for the average homeowner. 
@@ -166,7 +166,7 @@
       <div class="row" style="float:left">
         <div class="col-md-8">
           <h2>Support</h2>
-          <p><font size="4">Contacts Us! nat@phlow.com and sam@phlow.com and corina@phlow.com and elliott@phlow.com. Give us a ring-a-ling: 1(800)GuardN1. For general questions. </font></p>
+          <p><font size="4">Contacts Us! nat@phlow.com and sam@phlow.com and corina@phlow.com and elliott@phlow.com. Give us a ring-a-ling: 1(800)pHLow. For general questions. </font></p>
           
         </div>
 
