--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
     <div class="jumbotron customjumbo">
-      <div class="container newcontainer">
+      <div class="container newcontainer" style="padding:80px;">
      
         <h1 style="color:white">When in drought, we bring you lawn-and-order</h1> 
    
