--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
         <div class="col-md-8">
           <h2><b>About pHLow</b></h2>
-          <p><font size="6">pHLow is a way to automate your home sprinkler system. </font></p>
+          <p><font size="5">pHLow is a way to automate your home sprinkler system. Log onto your garden and use the canvas to place your plants in your backyard. </font></p>
           
         </div>
 
