--- a/demo.html
+++ b/demo.html
@@ -138,7 +138,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h1 class="p" style="color:white"> pHLow</h1>
+          <a href="index.html" class="btn btn-lg newbut" role="button"><h1 class="p" style="color:white"> pHLow</h1></a>
         </div>
         <div class="navbar-collapse collapse newnavbar">
           <form class="navbar-form navbar-right" role="form">
